tuprolog fix